--- a/client/dev/scss/topNav.scss
+++ b/client/dev/scss/topNav.scss
@@ -38,4 +38,6 @@ $primary: #006699;
     background: #2d2d2d;
     color: #fff;
     cursor: pointer;
+    border-right:none;
+    border-left:1px solid #dcdcdc;
 }
