Added profile view page

--- a/client/dev/scss/login.scss
+++ b/client/dev/scss/login.scss
@@ -67,6 +67,11 @@
 			cursor:pointer;
 		}
 
+		.btnCancel{
+			background:#0685ad;
+			margin-right:10px;
+		}
+
 		input[type="checkbox"]{
 			width:auto;
 			display:inline-block;
