some minor cs updates

--- a/client/dev/scss/seatViewer.scss
+++ b/client/dev/scss/seatViewer.scss
@@ -130,6 +130,7 @@ add.container-seat-chooser{
 			list-style-type:none;
 			max-width: 100%;
     		padding: 0;
+    		max-height:500px;
 		}
 
 		li{
