--- a/ngClient/src/app/register/app.register.html
+++ b/ngClient/src/app/register/app.register.html
@@ -1,86 +1,78 @@
 <div class="loginBox clearfix">
 	<h3>Register</h3>
 
-	<!-- {this.state.showError ?
-			<div class="error">
-				{this.state.showError}
-			</div>: null
-	} -->
-	<form onSubmit={this.registerMe}>
+	<div class="error" *ngIf="this.showError">
+		{{this.showError}}
+	</div>
+	
+	<form (submit) = this.registerMe(registerForm) #registerForm="ngForm">
 		<div class="control">
 			<label htmlFor="firstName">Name</label>
 			<div class="wrap-inline">
-				<input class="input input-inline" id="firstName" ref="firstName" placeholder="First Name" type="text" />
-				<input class="input input-inline" id="lastName" ref="lastName" placeholder="Last Name" type="text" />
+				<input class="input input-inline" id="firstName" ngModel name="firstName" placeholder="First Name" type="text" />
+				<input class="input input-inline" id="lastName" ngModel name="lastName" placeholder="Last Name" type="text" />
 			</div>
 		</div>
 		<div class="control">
 			<label htmlFor="username">Choose your username</label>
-			<input class="input" id="username" ref="username" type="text" />
+			<input class="input" id="username" ngModel name="username" type="text" />
 		</div>
 		<div class="control">
 			<label htmlFor="password">Password</label>
-			<input class="input" id="password" ref="password" type="password" />
+			<input class="input" id="password" ngModel name="password" type="password" />
 		</div>
 
 		<div class="control birthday clearfix">
 			<label htmlFor="birthday">Birthday</label>
 			<div class="wrap-inline clearfix">
-				<!-- <Select
-				    name="birthMonth"
-				    value={this.state.birthMonth}
-				    options={properties.monthOptions}
-				    onChange={this.monthSelect}
-				    class="select-inline"
-				/> -->
-				<input class="input input-inline" id="day" ref="birthDay" placeholder="Day" type="text" />
-				<input class="input input-inline" id="year" ref="birthYear" placeholder="Year" type="text" />
+				<select ngModel name="birthMonth">
+					<option value="" >Please select</option>
+	                <option *ngFor="let option of properties.monthOptions" [ngValue] = "option">{{option.label}}</option>
+	            </select>
+	           	<input class="input input-inline" id="day" ngModel name="birthDay" placeholder="Day" type="text" />
+				<input class="input input-inline" id="year" ngModel name="birthYear" placeholder="Year" type="text" />
 			</div>
 		</div>
 
 		<div class="control">
 			<label htmlFor="gender">Gender</label>
-			<!-- <Select
-			    name="gender"
-			    value={this.state.gender}
-			    options={properties.genderOptions}
-			    onChange={this.genderSelect}
-			/> -->
+			<select ngModel name="gender">
+				<option value="" >Please select</option>
+                <option *ngFor="let option of properties.genderOptions" [ngValue] = "option">{{option.label}}</option>
+            </select>			
 		</div>
 
 		<div class="control">
 			<label htmlFor="mobile">Mobile</label>
-			<input class="input" id="mobile" ref="mobile" placeholder="+91-9XXXXXXXXX" type="text" />
+			<input class="input" id="mobile" ngModel name="mobile" placeholder="+91-9XXXXXXXXX" type="text" />
 		</div>
 
 		<div class="control">
 			<label htmlFor="email">Email</label>
-			<input class="input" id="email" ref="email" placeholder="abc@xyz.com" type="email" />
+			<input class="input" id="email" ngModel name="email" placeholder="abc@xyz.com" type="email" />
 		</div>
 
 		<div class="control">
 			<label htmlFor="location">Location</label>
-			<!-- <Select
-			    name="location"
-			    value={this.state.location}
-			    options={properties.locationOptions}
-			    onChange={this.locationSelect}
-			/> -->
+			<select ngModel name="location">
+				<option value="" >Please select</option>
+                <option *ngFor="let option of properties.locationOptions" [ngValue] = "option">{{option.label}}</option>
+            </select>
 		</div>
 
 		<div class="control">
 			<label htmlFor="profilePic">Choose your profile pic</label>
-			<input type="file" id="profilePic" class="inputClass" onChange={this.myProfilePic} />
+			<input type="file" ngModel id="profilePic" name="profilePic" class="inputClass" (change) = this.profilePic($event) />
         </div>
 
 		<div class="control">
 			<label htmlFor="admin">
-				<input class="input" id="admin" ref="admin" type="checkbox" /> isAdmin?
+				<input class="input" id="admin" ngModel name="admin" type="checkbox" /> isAdmin?
 			</label>
 		</div>
 
 		<p class="control clearfix">
-			<button type="submit" onClick={this.registerMe}>Register</button>
+			<button type="submit">Register</button>
 		</p>
 	</form>
 </div>
