--- a/ngClient/src/app/chooseSeat/app.chooseSeat.html
+++ b/ngClient/src/app/chooseSeat/app.chooseSeat.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<div className="height100">
+	<top-nav></top-nav>
+	<div class="container-seat-chooser clearfix">
+		<SeatViewer></SeatViewer>
+		<ListChosenSeats></ListChosenSeats>
+	</div>
+</div>
