--- a/ngClient/src/assets/scss/loginProfile.scss
+++ b/ngClient/src/assets/scss/loginProfile.scss
@@ -40,6 +40,16 @@
 			color:rgba(255,255,255,.9);
 		}
 
+		select{
+			background: #313131;
+		    border: 1px solid #666;
+		    padding: 6px;
+		    border-radius: 5px;
+		    color: #ccc;
+		    margin-right: 15px;
+		    min-width: 150px;
+		}
+
 		.input-inline{
 			width:30%;
 			display:inline-block;
@@ -164,6 +174,16 @@
 			border-radius:5px;
 			margin-top:5px;
 			border:1px solid #666;
+		}
+
+		select{
+			background: #313131;
+		    border: 1px solid #666;
+		    padding: 6px;
+		    border-radius: 5px;
+		    color: #ccc;
+		    margin-right: 15px;
+		    min-width: 150px;
 		}
 
 		button{
